Closed Bug 165772 Opened 23 years ago Closed 23 years ago

Table splitting can be incorrect with rowspan cells

Categories

(Core :: Layout: Tables, defect, P3)

x86
Windows 2000
defect

Tracking

()

RESOLVED FIXED
mozilla1.2beta

People

(Reporter: karnaze, Assigned: karnaze)

References

()

Details

Attachments

(5 files, 4 obsolete files)

There are still a number of problems involving splitting of rowspan cells. The url (from bug 127128) is one example and there are others which I will add later. nsTableRowGroupFrame::SplitRowGroup and SplitSpanning cells has a number of flaws that need to be fixed.
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla1.2beta
Attached patch WIP patch (obsolete) — Splinter Review
Attached image test case 1 (obsolete) —
Attachment #101360 - Attachment is obsolete: true
Attached image test case 1 (obsolete) —
Attached file test 0
Attachment #101361 - Attachment is obsolete: true
Attached file test 1
Attached file test 3
Attached file test 3
Attached patch patch to fix the bug (obsolete) — Splinter Review
Attachment #100692 - Attachment is obsolete: true
Comment on attachment 101367 [details] [diff] [review] patch to fix the bug sr=kin@netscape.com Just add the comments, assertions and the firstOverflow to aRow change in UndoContinuedRow() as we discussed over the phone.
Attachment #101367 - Flags: superreview+
Comment on attachment 101367 [details] [diff] [review] patch to fix the bug r= alexsavulov looks good to me, no additional requests
Attachment #101367 - Flags: review+
Attachment #101367 - Attachment is obsolete: true
Attachment #101531 - Flags: superreview+
Attachment #101531 - Flags: review+
The patch is in the trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
This patch caused a rather serious regression, bug 212984 (see also its duplicates and dependencies), and also see bug 212984 comment 7 for date of regression.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: