bug 165772 - rewrite of SplitSpanningCells and most of SplitRowGroup to better handle splitting of rowspan cells. sr=kin, r=alexsavulov